<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">@string/launcher_name</string>
    <string name="folder_name" />
    <string name="work_folder_name">Work</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="shortcut_not_available">Shortcut isn\'t available</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="long_accessible_way_to_add">Double-tap &amp; hold to pick up a widget or use custom actions.</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="widget_accessible_dims_format">%1$d wide by %2$d high</string>
    <string name="all_apps_search_bar_hint">Search Apps</string>
    <string name="all_apps_loading_message">Loading Apps&#8230;</string>
    <string name="all_apps_no_search_results">No Apps found matching \"<xliff:g example="Android" id="query">%1$s</xliff:g>\"</string>
    <string name="all_apps_search_market_message">Search for more apps</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="remove_drop_target_label">Remove</string>
    <string name="uninstall_drop_target_label">Uninstall</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and shortcuts in Home.</string>
    <string name="msg_no_phone_permission"><xliff:g example="Launcher3" id="app_name">%1$s</xliff:g> is not allowed to make phone calls</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="gadget_setup_text">Setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="disabled_app_label">Disabled <xliff:g example="Messenger" id="app_name">%1$s</xliff:g></string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="workspace_new_page">New home screen page</string>
    <string name="folder_opened">Folder opened, <xliff:g example="5" id="width">%1$d</xliff:g> by <xliff:g example="3" id="height">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Tap to close folder</string>
    <string name="folder_tap_to_rename">Tap to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="widget_button_text">Widgets</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="settings_button_text">Launcher Settings</string>
    <string name="msg_disabled_by_admin">Disabled by your admin</string>
    <string name="accessibility_action_overview">Overview</string>
    <string name="package_state_unknown">Unknown</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_search">Search</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed. You can remove it, or search for the app and install it manually.</string>
    <string name="app_downloading_title"><xliff:g example="Messenger" id="name">%1$s</xliff:g> downloading, <xliff:g example="30%" id="progress">%2$s</xliff:g> complete</string>
    <string name="app_waiting_download_title"><xliff:g example="Messenger" id="name">%1$s</xliff:g> waiting to install</string>
    <string name="action_add_to_workspace">Add to Home screen</string>
    <string name="action_move_here">Move item here</string>
    <string name="item_added_to_workspace">Item added to home screen</string>
    <string name="item_removed">Item removed</string>
    <string name="action_move">Move item</string>
    <string name="move_to_empty_cell">Move to row <xliff:g example="1" id="number">%1$d</xliff:g> column <xliff:g example="1" id="number">%2$d</xliff:g></string>
    <string name="move_to_position">Move to position <xliff:g example="1" id="number">%1$s</xliff:g></string>
    <string name="move_to_hotseat_position">Move to favorites position <xliff:g example="1" id="number">%1$d</xliff:g></string>
    <string name="item_moved">Item moved</string>
    <string name="add_to_folder">Add to folder: <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="add_to_folder_with_app">Add to folder with <xliff:g example="Messenger" id="name">%1$s</xliff:g></string>
    <string name="added_to_folder">Item added to folder</string>
    <string name="create_folder_with">Create folder with: <xliff:g example="Game" id="name">%1$s</xliff:g></string>
    <string name="folder_created">Folder created</string>
    <string name="action_move_to_workspace">Move to Home screen</string>
    <string name="action_move_screen_left">Move screen to left</string>
    <string name="action_move_screen_right">Move screen to right</string>
    <string name="screen_moved">Screen moved</string>
    <string name="action_resize">Resize</string>
    <string name="action_increase_width">Increase width</string>
    <string name="action_increase_height">Increase height</string>
    <string name="action_decrease_width">Decrease width</string>
    <string name="action_decrease_height">Decrease height</string>
    <string name="widget_resized">Widget resized to width <xliff:g example="2" id="number">%1$s</xliff:g> height <xliff:g example="1" id="number">%2$s</xliff:g></string>
    <string name="action_deep_shortcut">Shortcuts</string>
    <string name="shortcuts_menu_description"><xliff:g example="3" id="number_of_shortcuts">%1$d</xliff:g> shortcuts for <xliff:g example="Messenger" id="app_name">%2$s</xliff:g></string>
    <string name="edit_drop_target_label">Edit</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="image_load_fail">Coudn\'t load image</string>
    <string name="wallpaper_load_fail">Couldn\'t load image as wallpaper</string>
    <string name="wallpaper_set_fail">Couldn\'t set image as wallpaper</string>
    <plurals name="number_of_items_selected">
        <item quantity="zero">%1$d selected</item>
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>
    <string name="wallpaper_accessibility_name">Wallpaper %1$d of %2$d</string>
    <string name="announce_selection">Selected <xliff:g example="Wallpaper 3 of 10" id="label">%1$s</xliff:g></string>
    <string name="wallpaper_delete">Delete</string>
    <string name="pick_image">My photos</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="crop_wallpaper">Crop wallpaper</string>
    <string name="which_wallpaper_option_home_screen">Home screen</string>
    <string name="which_wallpaper_option_lock_screen">Lock screen</string>
    <string name="which_wallpaper_option_home_screen_and_lock_screen">Home screen and lock screen</string>
    <string name="title_show_google_app">Show %1$s</string>
    <string name="title_show_google_app_default">Show Google app</string>
    <string name="label_search">Search</string>
    <string name="label_voice_search">Voice search</string>
    <string name="week_day_format">%1$s, %2$s</string>

    <!-- Settings & About -->
    <string name="personalization_title">Personalization</string>
    <string name="gestures_title">Gestures</string>
    <string name="display_title">Display</string>
    <string name="pref_enable_developer_title">Enable Developer Options</string>
    <string name="pref_enable_developer_summary">Turn off to disable all developer features</string>

    <string name="about_title">About</string>
    <string name="reset_launcher_title">Reset Launcher</string>
    <string name="reset_launcher_summary">Clear all settings and layout to defaults</string>
    <string name="reset_launcher_confirmation">Are you sure you want to reset the launcher? This will clear your layout and all settings.</string>
    <string name="about_text">NovaOS is an open-source launcher based on Lawnchair.</string>
    <string name="nova_version_title">Version 1.0.0 beta 19</string>
    <string name="nova_build_title">Build</string>
    <string name="nova_check_for_update_title">Check for updates</string>
    <string name="all_apps_personal_tab">Personal</string>
    <string name="all_apps_work_tab">Work</string>
    <string name="work_mode_toggle_description">Toggle Work Mode</string>
    <string name="launcher_name">NovaOS</string>
    <string name="start_menu_title">Start</string>

    <string name="swipe_down_action_title">Swipe Down Action</string>
    <string name="swipe_down_action_search">Search</string>
    <string name="swipe_down_action_notifications">Notifications</string>
    <string name="swipe_down_action_none">None</string>

    <string name="pref_taskbar_color_title">Dock Color</string>
    <string name="taskbar_color_default">Default</string>
    <string name="taskbar_color_red">Red</string>
    <string name="taskbar_color_blue">Blue</string>
    <string name="taskbar_color_green">Green</string>
    <string name="taskbar_color_black">Black</string>

    <string name="pref_icon_shape_title">Icon Shape</string>
    <string name="pref_folder_shape_title">Folder Shape</string>
    <string name="icon_shape_system">System Default</string>
    <string name="icon_shape_circle">Circle</string>
    <string name="icon_shape_square">Square</string>
    <string name="icon_shape_squircle">Squircle</string>
    <string name="icon_shape_teardrop">Teardrop</string>
    <string name="battery_level_template">%1$d%%</string>

    <string name="pref_taskbar_transparency_title">Dock Transparency</string>
    <string name="pref_show_pixel_bar_title">Pixel Now Bar</string>
    <string name="pref_show_pixel_bar_summary">Show search bar on the first page</string>
    <string name="taskbar_transparency_0">0% (Solid)</string>
    <string name="taskbar_transparency_25">25%</string>
    <string name="taskbar_transparency_50">50%</string>
    <string name="taskbar_transparency_75">75%</string>
    <string name="taskbar_transparency_100">100% (Transparent)</string>
</resources>
