<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2015 Google Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen android:title="Settings"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceScreen
        android:key="pref_screen_ui"
        android:title="@string/personalization_title">

        <com.novaos.novaos.preferences.IconPackPreference
            android:key="pref_iconPackPackage"
            android:title="Icon Pack"
            android:summary="Select an icon Pack"
            android:persistent="true" />

        <SwitchPreference
            android:key="pref_hotseatShouldUseExtractedColors"
            android:title="Tray uses wallpaper colors"
            android:summaryOn="The Tray will be colored with a color extracted from the wallpaper"
            android:summaryOff="The Tray will be colored gray, but adjusted by the wallpaper brightness"
            android:defaultValue="true"
            android:persistent="true" />

        <ListPreference
            android:key="pref_workspaceLabelColorHue"
            android:title="Color of Icon Labels on Homescreen"
            android:entries="@array/color_index_entries"
            android:entryValues="@array/color_index_values"
            android:defaultValue="-3"
            android:persistent="true" />

        <ListPreference
            android:key="pref_workspaceLabelColorVariation"
            android:title="Color Variation of Icon Labels on Homescreen"
            android:entries="@array/color_variation_entries"
            android:entryValues="@array/color_variation_values"
            android:defaultValue="5"
            android:persistent="true" />

        <com.novaos.novaos.preferences.SeekbarPreference
            android:key="pref_allAppsOpacitySB"
            android:title="All apps opacity"
            app:minValue="0"
            app:maxValue="1"
            app:defaultValue="1"
            app:summaryFormat="%.0f%%"
            app:summaryMultiplier="100"
            android:persistent="true" />

        <com.novaos.novaos.preferences.SeekbarPreference
            android:key="pref_iconScaleSB"
            android:title="Icon Scale"
            app:minValue="0.3"
            app:maxValue="1.5"
            app:summaryFormat="%.0f%%"
            app:summaryMultiplier="100"
            app:defaultValue="1.0"
            android:persistent="true" />

        <com.novaos.novaos.preferences.SeekbarPreference
            android:key="pref_iconTextScaleSB"
            android:title="Icon Text Scale"
            app:minValue="0.3"
            app:maxValue="1.5"
            app:summaryFormat="%.0f%%"
            app:summaryMultiplier="100"
            app:defaultValue="1.0"
            android:persistent="true" />

        <ListPreference
            android:key="pref_taskbarColor"
            android:title="@string/pref_taskbar_color_title"
            android:entries="@array/taskbar_color_entries"
            android:entryValues="@array/taskbar_color_values"
            android:defaultValue="default"
            android:persistent="true" />

        <ListPreference
            android:key="pref_taskbarTransparency"
            android:title="@string/pref_taskbar_transparency_title"
            android:entries="@array/taskbar_transparency_entries"
            android:entryValues="@array/taskbar_transparency_values"
            android:defaultValue="0.25"
            android:persistent="true" />

        <ListPreference
            android:key="pref_iconShape"
            android:title="@string/pref_icon_shape_title"
            android:entries="@array/icon_shape_entries"
            android:entryValues="@array/icon_shape_values"
            android:defaultValue="system"
            android:persistent="true" />

        <ListPreference
            android:key="pref_folderShape"
            android:title="@string/pref_folder_shape_title"
            android:entries="@array/icon_shape_entries"
            android:entryValues="@array/icon_shape_values"
            android:defaultValue="circle"
            android:persistent="true" />

        <SwitchPreference
            android:key="pref_app_drawer_enabled"
            android:title="Enable App Drawer"
            android:defaultValue="true"
            android:persistent="true" />

        <SwitchPreference
            android:key="pref_add_new_apps_to_home"
            android:title="Add new apps to Home screen"
            android:defaultValue="true"
            android:persistent="true" />

        <SwitchPreference
            android:key="pref_showHidden"
            android:title="Show Hidden Apps"
            android:summaryOn="Hidden apps will be shown to change visibility settings"
            android:summaryOff="Hidden apps won\'t be visible"
            android:defaultValue="false"
            android:persistent="true" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="pref_screen_gestures"
        android:title="@string/gestures_title">

        <SwitchPreference
            android:key="pref_pinchToOverview"
            android:title="Pinch to Overview"
            android:summary="Pinch on the Homescreen to open the overview"
            android:defaultValue="true"
            android:persistent="true" />

        <ListPreference
            android:key="pref_swipeDownAction"
            android:title="@string/swipe_down_action_title"
            android:entries="@array/swipe_down_action_entries"
            android:entryValues="@array/swipe_down_action_values"
            android:defaultValue="search"
            android:persistent="true" />

        <SwitchPreference
            android:key="pref_lightStatusBar"
            android:title="Light StatusBar"
            android:summaryOn="The status bar may show dark icons when using a light wallpaper."
            android:summaryOff="The status bar will always show light icons."
            android:defaultValue="true"
            android:persistent="true" />

        <SwitchPreference
            android:key="pref_enableHapticFeedback"
            android:title="Enable Haptic Feedback"
            android:defaultValue="false"
            android:persistent="true" />

        <SwitchPreference
            android:key="pref_keepScrollState"
            android:title="Save Scrolled State"
            android:summary="Saves the scroll position in the app tray"
            android:defaultValue="false"
            android:persistent="true" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="pref_screen_display"
        android:title="@string/display_title">

        <ListPreference
            android:key="pref_numCols"
            android:title="Number of columns"
            android:entries="@array/numColsTexts"
            android:entryValues="@array/numColsValues"
            android:defaultValue="@string/generalDefault"
            android:persistent="true" />

        <ListPreference
            android:key="pref_numRows"
            android:title="Number of rows"
            android:entryValues="@array/numRowsValues"
            android:entries="@array/numRowsTexts"
            android:defaultValue="@string/generalDefault"
            android:persistent="true" />

        <ListPreference
            android:key="pref_numHotseatIcons"
            android:title="Number of icons in tray"
            android:entryValues="@array/numHotseatIconsValues"
            android:entries="@array/numHotseatIconsTexts"
            android:defaultValue="@string/generalDefault"
            android:persistent="true" />

        <SwitchPreference
            android:key="pref_showPixelBar"
            android:title="@string/pref_show_pixel_bar_title"
            android:summary="@string/pref_show_pixel_bar_summary"
            android:defaultValue="false"
            android:persistent="true" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="pref_screen_about"
        android:title="@string/about_title">

        <Preference
            android:title="@string/about_title"
            android:key="about"
            android:summary="@string/about_text" />

        <Preference
            android:title="@string/nova_version_title"
            android:key="version"
            android:selectable="false" />

        <Preference
            android:title="@string/nova_build_title"
            android:key="build" />

        <Preference
            android:title="@string/nova_check_for_update_title"
            android:key="check_for_update" />

        <Preference
            android:title="What\'s New"
            android:key="whats_new"
            android:summary="See the latest changes and features" />

        <Preference
            android:title="@string/reset_launcher_title"
            android:key="reset_launcher"
            android:summary="@string/reset_launcher_summary" />

    </PreferenceScreen>

    <PreferenceScreen
        android:key="category_developer"
        android:title="Developer">

        <SwitchPreference
            android:key="pref_dev_mode"
            android:title="@string/pref_enable_developer_title"
            android:summary="@string/pref_enable_developer_summary"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="pref_show_build_info"
            android:dependency="pref_dev_mode"
            android:title="Show Build Info on Home"
            android:summary="Display version and build number in top-left corner"
            android:defaultValue="true" />

        <Preference
            android:key="pref_export_logs"
            android:dependency="pref_dev_mode"
            android:title="Export Crash Logs"
            android:summary="Save logs to a file for developer support" />

        <Preference
            android:key="pref_clear_logs"
            android:dependency="pref_dev_mode"
            android:title="Clear Crash Logs"
            android:summary="Delete all saved crash reports" />

    </PreferenceScreen>

</PreferenceScreen>
